--- a/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-top.html
+++ b/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-top.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
     <title>Lambda Calculus interpreter</title>
 
-    <link rel="stylesheet" href="../../../../../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" />
+    <link rel="stylesheet" href="../../../../../../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" />
 
 
     <style>
