--- a/Exercises/PL/SyntaxMC.html
+++ b/Exercises/PL/SyntaxMC.html
@@ -22,24 +22,32 @@
 
 <div class="exercise">
 	<div class="vars">
-		<var id="JSAV">initSyntaxTF()</var>
-		<var id="CorrectAnswer">getAnswerSyntaxTF()</var>
+		<var id="JSAV">test</var>
+		<var id="CorrectAnswer">Option1</var>
+		<var id="Option0">0</var>
+		<var id="Option1">1</var>
+		<var id="Option2">2</var>
+		<var id="Option3">3</var>
+		<var id="Option4">4</var>
 	</div>
 	<div class="problems">
 		<div>
-			<div class="question"><p>Is the following expression a syntactically correct &lambda; expression?</p>
+		  <div class="question"><p>How many of the following expressions are syntactically correct &lambda; expressions?</p>
 				<div id="jsav"></div>
 			</div>
 			<div class="solution"><var>CorrectAnswer</var></div>
 			<ul class="choices" data-category="true">
-			  <li><var>"True"</var></li>
-			  <li><var>"False"</var></li>
+			  <li><var>Option0</var></li>
+			  <li><var>Option1</var></li>
+			  <li><var>Option2</var></li>
+			  <li><var>Option3</var></li>
+			  <li><var>Option4</var></li>
 			</ul>
 
 			<div class="hints">
 			  <p>Remember that parentheses are not optional.</p>
 			  <p>Parentheses must surround every application expression, but nothing else.</p>
-			  <p>You could try to build a parse tree for this expression.<p>
+			  <p>You could try to build a parse tree for each expression.<p>
 			</div>
 		</div>
 	</div>
