--- a/Exercises/PL/SyntaxMC.html
+++ b/Exercises/PL/SyntaxMC.html
@@ -22,8 +22,8 @@
 
 <div class="exercise">
 	<div class="vars">
-		<var id="JSAV">test</var>
-		<var id="CorrectAnswer">Option1</var>
+		<var id="JSAV">initSyntaxMC()</var>
+		<var id="CorrectAnswer">getAnswerSyntaxMC()</var>
 		<var id="Option0">0</var>
 		<var id="Option1">1</var>
 		<var id="Option2">2</var>
