Fixed alignment issues, changed the lambda expression and adjusted the existing slides accordingly in the parse tree slideshow of the lambda calculus chapter

--- a/AV/PL/interpreters/lambdacalc/slideshows/AV/parseTree.html
+++ b/AV/PL/interpreters/lambdacalc/slideshows/AV/parseTree.html
@@ -15,7 +15,7 @@
     }
 
     .avcontainer {
-       width: 100%;
+       width: 900px;
        margin: auto;
        height: 800px;
        text-align: center;
@@ -40,9 +40,35 @@
     max-width: 6px;
    }
 
+    div.jsavcanvas {
+         max-width: 900px;
+    }
+
+    div.avcontainer  div.jsavcanvas ol.jsavarray   {
+       background-color: #ddd;
+       max-width: 170px;
+       margin: auto;
+       margin-bottom: 10px;
+       max-height: 30px;
+       min-height: 30px;
+    }
+
+    div.avcontainer  div.jsavcanvas ol.jsavarray  li.jsavindex  {
+       max-height: 30px;
+       min-height:30px;
+       height: 30px;
+    }
+
+
+    div.avcontainer  div.jsavcanvas ol.jsavarray  li.jsavindex span.jsavvalue {
+       max-height:30px;
+       min-height:30px;
+    }
+
     ol.jsavarray .defaultCellStyle {
         border: none;
         box-shadow : none; 
+        background-color: #ddd;
     }
 
     ol.jsavarray .lambdaWidth {
