--- a/AV/Development/NP/pairToSortReduction.html
+++ b/AV/Development/NP/pairToSortReduction.html
@@ -3,9 +3,9 @@
 <head>
   <title>Reduction</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="sortToPairReduction.css" type="text/css" />
+  <link rel="stylesheet" href="../../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="pairToSortReduction.css" type="text/css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-        Reduction of sorting to pairing
+        Reduction of pairing to sorting
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -38,13 +38,13 @@
   </div>
 </div> 
 
-<script src="../../lib/jquery.min.js"></script>
-<script src="../../lib/jquery-ui.min.js"></script>
-<script src="../../JSAV/lib/jquery.transit.js"></script>
-<script src="../../JSAV/lib/raphael.js"></script>
-<script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../lib/odsaUtils.js"></script>
-<script src="../../lib/odsaAV-min.js"></script>
-<script src="sortToPairReduction.js"></script>
+<script src="../../../lib/jquery.min.js"></script>
+<script src="../../../lib/jquery-ui.min.js"></script>
+<script src="../../../JSAV/lib/jquery.transit.js"></script>
+<script src="../../../JSAV/lib/raphael.js"></script>
+<script src="../../../JSAV/build/JSAV-min.js"></script>
+<script src="../../../lib/odsaUtils.js"></script>
+<script src="../../../lib/odsaAV-min.js"></script>
+<script src="pairToSortReduction.js"></script>
 </body>
 </html>
