--- a/Exercises/Development/TSP_KA.html
+++ b/Exercises/Development/TSP_KA.html
@@ -14,7 +14,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
-  <link rel="stylesheet" href="./TSP.css" type="text/css" />
+  <link rel="stylesheet" href="TSP_KA.css" type="text/css" />
 </head>
 <body data-height="750" data-width="950">
 
