--- a/Exercises/Development/hamiltonianCycle_KA.html
+++ b/Exercises/Development/hamiltonianCycle_KA.html
@@ -15,7 +15,7 @@
   <script src="graphUtilsHC.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
-  <link rel="stylesheet" href="./hamiltonianCycle.css" type="text/css" />
+  <link rel="stylesheet" href="hamiltonianCycle_KA.css" type="text/css" />
 </head>
 <body data-height="750" data-width="950">
 
