--- a/Exercises/Development/threeSAT_KA.html
+++ b/Exercises/Development/threeSAT_KA.html
@@ -11,6 +11,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+  <link rel="stylesheet" href="threeSAT_KA.css" type="text/css" />
   <style>
     .jsavcontainer .jsavcanvas {
       min-height: 150px;
