--- a/Exercises/Development/vertexCover_KA.html
+++ b/Exercises/Development/vertexCover_KA.html
@@ -14,9 +14,10 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="../../AV/Development/graphUtils.js"></script>
+  <script src="graphUtils.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+  <link rel="stylesheet" href="vertexCover_KA.css" type="text/css" />
 </head>
 <body data-height="750" data-width="950">
 
