Added the SyntaxTreeMC exercise in the lambda calculus chapter

--- a/AV/PL/interpreters/lambdacalc/slideshows/AV/parseTree.html
+++ b/AV/PL/interpreters/lambdacalc/slideshows/AV/parseTree.html
@@ -56,9 +56,8 @@
        min-height: 30px;
     }
 
-    div.avcontainer div.jsavcanvas div.jsavtree   div.moveLeft {
-         background-color: green;
-         left: 50px !important;
+    div.moveLeft {
+         left: -30px !important;
     }
 
 
