--- a/Exercises/PL/SyntaxTreeMC.html
+++ b/Exercises/PL/SyntaxTreeMC.html
@@ -50,11 +50,16 @@
 			  <p>Remember to count all leaf nodes,
 			  including one node for each &lambda; and one
 			  node for each dot.</p>
-			  <p>The same is true for each left
-			  parenthesis and each right parenthesis.</p>
+			  <p>There is also one node for each left
+			  parenthesis and one node for each right
+			  parenthesis.</p>
 			  <p>There is also one leaf node for each
 			  variable, in addition to the interior node
 			  for the non-terminal &lt;var&gt;.</p>
+			  <p>After you have built enough parse trees, you
+			  should notice patterns that allow you to
+			  answer this question  without
+			  building a parse tree.
 			</div>
 		</div>
 	</div>
