--- a/AV/Development/bPlusTreeInsertPRO.html
+++ b/AV/Development/bPlusTreeInsertPRO.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <link rel="stylesheet" href="../../DataStructures/ArrayTree.css" type="text/css" />
   <style>
-    .jsavtreenode {
+    .jsavtreenode .jsavarray, .jsavnode.jsavindex {
       cursor: pointer;
     }
   </style>
