B+: Split now also works on non-leaf nodes.

--- a/AV/Development/bPlusTreeInsertPRO.html
+++ b/AV/Development/bPlusTreeInsertPRO.html
@@ -11,6 +11,9 @@
     .jsavtreenode .jsavarray, .jsavnode.jsavindex {
       cursor: pointer;
     }
+    .jsavarray {
+      white-space: nowrap;
+    }
   </style>
 </head>
 
