Fixed styling issues (e.g., conflicts between PL css and pygments.css)

--- a/AV/PL/AV/parseTree.html
+++ b/AV/PL/AV/parseTree.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Lambda Calculus interpreter</title>
     <script>var LAMBDA = {}; </script>
-    <link rel="stylesheet" href="../../../../../../JSAV/css/JSAV.css" type="text/css"  media="screen" title="no title" />
+    <link rel="stylesheet" href="../../../JSAV/css/JSAV.css" type="text/css"  media="screen" title="no title" />
 
     <style type="text/css">
     html, body {
@@ -139,16 +139,16 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../../../../../../JSAV/lib/jquery.transit.js"></script>
-    <script src="../../../../../../JSAV/lib/raphael.js"></script>
-    <script src="../../../../../../JSAV/build/JSAV.js"></script>
+    <script src="../../../JSAV/lib/jquery.transit.js"></script>
+    <script src="../../../JSAV/lib/raphael.js"></script>
+    <script src="../../../JSAV/build/JSAV.js"></script>
 
     <!--script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script-->
-    <script src="../../version1.4/scripts/init.js"></script>
-    <script src="../../version1.4/scripts/grammar.js"></script>
-    <script src="../../version1.4/scripts/absyn.js"></script>
-    <script src="../../version1.4/scripts/interpreter.js"></script>
-    <script src="../../version1.4/scripts/randomExamples.js"></script>
+    <script src="../interpreters/lambdacalc/version1.4/scripts/init.js"></script>
+    <script src="../interpreters/lambdacalc/version1.4/scripts/grammar.js"></script>
+    <script src="../interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
+    <script src="../interpreters/lambdacalc/version1.4/scripts/interpreter.js"></script>
+    <script src="../interpreters/lambdacalc/version1.4/scripts/randomExamples.js"></script>
     <script src="./parseTree.js"></script>
 
 </div>
