--- a/AV/PL/profexercises/applicativeOrderPro.html
+++ b/AV/PL/profexercises/applicativeOrderPro.html
@@ -5,14 +5,6 @@
     <link rel="stylesheet" href="../../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="profExercises.css" type="text/css" />
-
-<!--
-    <script type="text/javascript" src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/grammar.js"</script>
-    <script type="text/javascript" src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"</script>
-    <script type="text/javascript" src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/interpreter.js"</script>
-    <script type="text/javascript" src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/randomExamples.js"</script>
--->
-
   </head>
 
 
@@ -75,6 +67,10 @@
 <script src="../../../JSAV/build/JSAV-min.js"></script>
 <script src="../../../lib/odsaUtils-min.js"></script>
 <script src="../../../lib/odsaAV-min.js"></script>
+<script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/grammar.js"></script>
+<script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
+<script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/interpreter.js"></script>
+<script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/randomExamples.js"></script>
 <script src="./applicativeOrderPro.js"></script>
 
 
