--- a/AV/PL/profexercises/applicativeOrderPro.html
+++ b/AV/PL/profexercises/applicativeOrderPro.html
@@ -27,7 +27,7 @@
 	reductions are possible. When entering your answer for each step:</p>
         <ol>
 	  <li>Always pick the correct &beta;-redex according to the
-	  applicative-order reduction strategy.</li>
+	  <strong>applicative-order</strong> reduction strategy.</li>
           <li>Use the character ^ instead of  &lambda;.</li>
 	  <li>Whenever you have to perform an &alpha;-conversion,
 	     always pick the (alphabetically) first lowercase letter
@@ -36,8 +36,8 @@
       </div>
       <div id="lefthalf">
 	<p><strong>&lambda; expression that you must reduce in this step:</strong></p>	
-	<p class="small"><strong>(if no reduction is possible, click
-	"Done" on the right)</strong></p>
+	<p class="small">(if no reduction is possible, click
+	"Done" on the right)</p>
 	<div id="expression"></div>
       </div>
       <div id="righthalf">
