Made progress on the grading of applicativeOrderPro exercise in PL/LC chapter; not quite working yet

--- a/AV/PL/profexercises/applicativeOrderPro.html
+++ b/AV/PL/profexercises/applicativeOrderPro.html
@@ -30,8 +30,8 @@
 	  <strong>applicative-order</strong> reduction strategy.</li>
           <li>Use the character ^ instead of  &lambda;.</li>
 	  <li>Whenever you have to perform an &alpha;-conversion,
-	     always pick the (alphabetically) first lowercase letter
-	     that does not appear in the current expression.
+	     always pick the first lowercase letter in alphabetical order
+	     that does not appear in the current expression (i.e., "<code>a</code>", then "<code>b</code>", etc.).
 	</ol>
       </div>
       <div id="lefthalf">
