Added nodesize option for the ArrayTree. Make sure all nodes in the tree are the same size.

--- a/AV/Development/ArrayTreeTest.html
+++ b/AV/Development/ArrayTreeTest.html
@@ -26,7 +26,7 @@
     var jsav = new JSAV("jsavcontainer");
     jsav.recorded();
 
-    var tree = new jsav.ds.arraytree(3);
+    var tree = new jsav.ds.arraytree({ nodesize: 3 });
 
     tree.root([1, 1, 1]);
 
