--- a/AV/PL/profexercises/applicativeNormalOrderPro.html
+++ b/AV/PL/profexercises/applicativeNormalOrderPro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Applicative Order Proficiency Exercise</title>
+    <title><span>Applicative- versus Normal-Order Proficiency Exercise</title>
     <link rel="stylesheet" href="../../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="profExercises.css" type="text/css" />
@@ -27,7 +27,7 @@
 	reductions are possible. When entering your answer for each step:</p>
         <ol>
 	  <li>Always pick the correct &beta;-redex according to the
-	  <strong>applicative-order</strong> reduction strategy.</li>
+	  <strong id="strategy">applicative-order</strong> reduction strategy.</li>
           <li>Use the character ^ instead of  &lambda;.</li>
 	  <li>Whenever you have to perform an &alpha;-conversion,
 	     always pick the first lowercase letter in alphabetical order
@@ -71,7 +71,7 @@
 <script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
 <script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/interpreter.js"></script>
 <script src="../../../AV/PL/interpreters/lambdacalc/version1.4/scripts/randomExamples.js"></script>
-<script src="./applicativeOrderPro.js"></script>
+<script src="./applicativeNormalOrderPro.js"></script>
 
 
 </body>
