B+ insert PRO: Added scroll wrapper to canvas. Added random input.

--- a/AV/Development/bPlusTreeInsertPRO.html
+++ b/AV/Development/bPlusTreeInsertPRO.html
@@ -14,6 +14,10 @@
     .jsavarray {
       white-space: nowrap;
     }
+    .scoll-wrapper {
+      width: 100%;
+      overflow-x: scroll;
+    }
   </style>
 </head>
 
@@ -23,8 +27,10 @@
     <p class="instructLabel"></p>
     <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
-    <div class="jsavcanvas">
-      <div id="stackcontainer" style="margin: auto; padding: 15px"></div>
+    <div class="scoll-wrapper">
+      <div class="jsavcanvas">
+        <div id="stackcontainer" style="margin: auto; padding: 15px"></div>
+      </div>
     </div>
   </div>
 
