Added model solution to B+ insert PRO.

--- a/AV/Development/bPlusTreeInsertPRO.html
+++ b/AV/Development/bPlusTreeInsertPRO.html
@@ -23,6 +23,7 @@
 
 <body>
   <div id="jsavcontainer">
+    <a href="#" class="jsavsettings"></a>
     <h1 class="exerciseTitle"></h1>
     <p class="instructLabel"></p>
     <p class="instructions"></p>
