--- a/Exercises/PL/SyntaxTF.html
+++ b/Exercises/PL/SyntaxTF.html
@@ -27,7 +27,9 @@
 	</div>
 	<div class="problems">
 		<div>
-			<div class="question"><p>Is the following expression a syntactically correct &lambda; expression?</p>
+			<div class="question"><p>True or False? The
+			following expression is a syntactically
+			correct &lambda; expression.</p>
 				<div id="jsav"></div>
 			</div>
 			<div class="solution"><var>CorrectAnswer</var></div>
