Minor improvements to B+ insert

--- a/AV/Development/bPlusTreeInsertPRO.html
+++ b/AV/Development/bPlusTreeInsertPRO.html
@@ -18,6 +18,10 @@
       width: 100%;
       overflow-x: scroll;
     }
+    #stackcontainer {
+      margin: auto;
+      padding: 15px;
+    }
   </style>
 </head>
 
@@ -30,7 +34,7 @@
     <p align="center" class="jsavexercisecontrols"></p>
     <div class="scoll-wrapper">
       <div class="jsavcanvas">
-        <div id="stackcontainer" style="margin: auto; padding: 15px"></div>
+        <div id="stackcontainer"></div>
       </div>
     </div>
   </div>
