B+ insert: Added comments to model answer.

--- a/AV/Development/bPlusTreeInsertPRO.html
+++ b/AV/Development/bPlusTreeInsertPRO.html
@@ -22,6 +22,9 @@
       margin: auto;
       padding: 15px;
     }
+    .jsavnode.ms-highlight {
+      box-shadow: 0 0 30px #55f;
+    }
   </style>
 </head>
 
