An exercise clarified

--- a/Exercises/RecurTutor2/mbtSwapPROG.html
+++ b/Exercises/RecurTutor2/mbtSwapPROG.html
@@ -24,10 +24,10 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-      Given two binary trees, swap the values of their nodes.	  
+      Given two binary trees with the same structure, swap the values of their nodes.	  
       Add appropriate lines of code to the following function skeleton
       so that the function will recursively swap the values between
-      the binary trees pointed at by "root1" and "root2".</p>
+      the binary trees pointed at by "root1" and "root2". Note: Assume that the trees have the same structure so you don't need to check on that in your code.</p>
 
     <textarea  id="codeTextarea">
 void btSwapTrees(BSTNode root1, BSTNode root2) {
