More multiple trees programming exercises added to RecurTutor2

--- a/Exercises/RecurTutor2/MultipleBinaryTreesSumm.html
+++ b/Exercises/RecurTutor2/MultipleBinaryTreesSumm.html
@@ -14,6 +14,7 @@
 <body data-height="580" data-width="1000">
   <div class="exercise" data-name="mbtSamePROG"></div>
   <div class="exercise" data-name="mbtSwapPROG"></div>
-  
+  <div class="exercise" data-name="mbtStrIdnPROG"></div>
+  <div class="exercise" data-name="mbtMirrorPROG"></div>
 </body>
 </html>
