Added freeVarHighlight exercise to LC/PL chapter

--- a/Exercises/PL/freeVarHighlight.html
+++ b/Exercises/PL/freeVarHighlight.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-	<title>Free Variables</title>
+	<title>Identifying Free Variables</title>
 	<script src="../../lib/jquery.min.js"></script>
 	<script src="../../lib/jquery-ui.min.js"></script>
 	<script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -9,7 +9,7 @@
 	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 	<script src="../../JSAV/build/JSAV-min.js"></script>
 	<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-	<script>var LAMBDA = {};</script>
+	<link rel="stylesheet" href="./exercises.css" type="text/css" />
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/interpreter.js"></script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/randomExamples.js"></script>
@@ -90,7 +90,7 @@
   <div class="problems">
     <div>
       <div class="question"><p>Click on all of the free variable
-	  occurrences in this expression. Then click on the right to
+	  occurrences, if any,  in this expression. Then click on the right to
 	  check your answer.</p>
 	<div id="jsav"></div>
       </div>
@@ -99,8 +99,29 @@
 	<div class="validator-function">
 	   return validateFreeVar()</div>
       </div>
-      <div class="hints">
-	<p>Which variables are being captured by a lambda?</p>
+      <div class="hints freeVarHighlightHints">
+	<p>Consider each (non-binding) variable occurrence in turn. If
+	the expression contains no binding occurrence with the same
+	name as the variable occurrence under consideration, then this
+	variable occurrence is clearly free.</p>
+	<p>If there is one or more binding occurrences with the same
+	name as the variable occurrence under consideration, determine
+	whether it belongs to the scope of one of these binding
+	occurrences. If so, then the variable occurrence in question
+	is bound. Otherwise, it is free.</p>
+	<p>If you are still not sure what the correct answer is, here
+        is a complete and correct algorithm to determine whether or
+        not a given variable occurrence is free in a given lambda
+        expression:<br /> 1. Build a parse tree for the
+        expression.<br />  2. Find the leaf node in this tree that
+        corresponds to the variable occurrence in
+        question.<br /> 3. Starting from this leaf node, repeatedly go
+        up along the edges of the tree until you reach a node for a
+        lambda abstraction whose parameter has the same name as the
+        variable in question.<br />  4. If you find such a node, then
+        the variable occurrence is bound; otherwise, it is
+        free.<br />
+        </p>
       </div> 
     </div>
   </div>
