Fixed vertical spacing issue due to long hints in FreeVarHighlight exercise in PL/LC chapter

--- a/Exercises/PL/freeVarHighlight.html
+++ b/Exercises/PL/freeVarHighlight.html
@@ -9,7 +9,6 @@
 	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 	<script src="../../JSAV/build/JSAV-min.js"></script>
 	<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-	<link rel="stylesheet" href="./exercises.css" type="text/css" />
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/interpreter.js"></script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/randomExamples.js"></script>
@@ -90,8 +89,8 @@
   <div class="problems">
     <div>
       <div class="question"><p>Click on all of the free variable
-	  occurrences, if any,  in this expression. Then click on the right to
-	  check your answer.</p>
+      occurrences below and then check your answer on the right.
+	</p>
 	<div id="jsav"></div>
       </div>
       <div class="solution" data-type="custom">
