--- a/Exercises/Development/GraphTermMC1.html
+++ b/Exercises/Development/GraphTermMC1.html
@@ -1,25 +1,28 @@
-
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-<title>Graph Term Question 1</title>
-	<script src="../../lib/jquery.min.js"></script>
-	<script src="../../lib/jquery-ui.min.js"></script>
-	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <title>Graph Term Question 1</title>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
+<body>
 <div class="exercise">
-	<div class="problems">
-		<div id="problem-type-or-description">
-			<p class="question">If two vertices are adjacent the edge connecting them is called</p>
-			<div class="solution">incident</div>
-			<ul class="choices">
-				<li>incident</li>
-				<li>onto</li>
-				<li>connecting</li>
-			</ul>
-		</div>
-	</div>
+  <div class="problems">
+    <div id="problem-type-or-description">
+      <p class="question">If two vertices are adjacent the edge connecting them is called</p>
+      <div class="solution"><var>incident</var></div>
+      <ul class="choices">
+	<li><var>"incident"</var></li>
+	<li><var>"onto"</var></li>
+	<li><var>"connecting"</var></li>
+      </ul>
+      <div class="hints">
+	<p>hint 1</p>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
