Graph intro true false and multiple choice questions modified. Just need to add hints and a couple dynamic questions

--- a/Exercises/Development/GraphDigraphTF1.html
+++ b/Exercises/Development/GraphDigraphTF1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Graph Term: Copmlete</title>
+  <title> Graph Digraph TF 1</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,16 +11,17 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">A graph containing all possible edges is a _____ graph</p>
-      <div class="solution"><var>"complete"</var></div>
-	  <ul class="choices">
-  <li><var>"dense"</var></li>
-  <li><var>"sparse"</var></li>
-  <li><var>"directed"</var></li>
+      <p class="problem">Answer TRUE or FALSE.</p>
+      <p class="question">
+  A digraph is a directed graph.</p>
+      <div class="solution"><var>"True"</var></div>
+      <ul class="choices" data-category="true">
+	<li><var>"True"</var></li>
+	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-        <p>I ned to come up with a hing</p>
-        <p>I need to come up with another hint.</p>
+				<p>Come up with hints.</p>
+        <p>More hints.</p>
       </div>
     </div>
   </div>
