--- a/Exercises/Development/GraphTermMC3.html
+++ b/Exercises/Development/GraphTermMC3.html
@@ -1,23 +1,27 @@
-
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-<title>Graph Term Question 3</title>
-	<script src="../../lib/jquery.min.js"></script>
-	<script src="../../lib/jquery-ui.min.js"></script>
-	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <title>Graph Term: Adjacent</title>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
+<body>
 <div class="exercise">
 	<div class="problems">
 		<div id="problem-type-or-description">
 			<p class="question">When a vertex  Q is connected by an edge to a vertex K, what is the term for their relationship?</p>
-			<div class="solution">Q and K are adjacent</div>
+			<div class="solution"><var>"Q and K are adjacent</var></div>
 			<ul class="choices">
-				<li>Q and K are incident </li>
-				<li>Q and K are insecure </li>
-				<li>Q and K are isolated </li>
-			</ul>
+	<li><var>"Q and K are incident"</var></li>
+	<li><var>"Q and K are insecure"</var></li>
+	<li><var>"Q and K are isolated"<var></li>
+		  </ul>
+		  <div class="hints">
+        <p>I ned to come up with a hing</p>
+        <p>I need to come up with another hint.</p>
+      </div>
 		</div>
 	</div>
 </div>
