--- a/Exercises/Development/GraphTermMC5.html
+++ b/Exercises/Development/GraphTermMC5.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-<title>Graph Term Question 5</title>
+	<title>Graph Term Question 5</title>
 	<script src="../../lib/jquery.min.js"></script>
 	<script src="../../lib/jquery-ui.min.js"></script>
 	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
+<body>
 <div class="exercise">
 	<div class="problems">
 		<div id="problem-type-or-description">
 			<p class="question">A graph without cycles is called a/an:</p>
-			<div class="solution">acyclic graph</div>
+			<div class="solution"><var>"acyclic graph"</var></div>
 			<ul class="choices">
-				<li>undirected graph </li>
-				<li>simple graph</li>
-				<li>connected graph</li>
+	<li><var>"undirected graph"</var></li>
+	<li><var>"simple graph"</var></li>
+	<li><var>"connected graph"</var></li>
 			</ul>
+			<div class="hints">
+        <p>I ned to come up with a hing</p>
+        <p>I need to come up with another hint.</p>
+      </div>
 		</div>
 	</div>
 </div>
