--- a/Exercises/Development/GraphTermMC4.html
+++ b/Exercises/Development/GraphTermMC4.html
@@ -2,22 +2,27 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-<title>Graph Term Question 4</title>
+	<title>Graph Terms: Directed Graph</title>
 	<script src="../../lib/jquery.min.js"></script>
 	<script src="../../lib/jquery-ui.min.js"></script>
 	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
+<body>
 <div class="exercise">
 	<div class="problems">
 		<div id="problem-type-or-description">
 			<p class="question">A graph with directed edges is called a</p>
-			<div class="solution">directed graph</div>
+			<div class="solution"><var>"directed graph"</var></div>
 			<ul class="choices">
-				<li>labeled graph</li>
-				<li>weighted graph </li>
-				<li>complete graph</li>
+	<li><var>"labeled graph"</var></li>
+	<li><var>"weighted graph"</var></li>
+	<li><var>"complete graph"</var></li>
 			</ul>
+			<div class="hints">
+        <p>I ned to come up with a hing</p>
+        <p>I need to come up with another hint.</p>
+      </div>
 		</div>
 	</div>
 </div>
