SubstitutionCases exercise in PL/LC is now functional

--- a/Exercises/PL/SubstitutionCases.html
+++ b/Exercises/PL/SubstitutionCases.html
@@ -2,7 +2,7 @@
 <html data-require="math">
 <head>
         <meta charset="utf-8">
-	<title>Case Determincation in the Substitution Algorithm</title>
+	<title>Case Determination in the Substitution Algorithm</title>
 	<script src="../../lib/jquery.min.js"></script>
 	<script src="../../lib/jquery-ui.min.js"></script>
 	<script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -11,10 +11,12 @@
 	<!--script src="../../ODSAkhan-exercises/utils/math.js"></script-->
 	<script src="../../JSAV/build/JSAV-min.js"></script>
 	<script>var LAMBDA = {};</script>
-	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
+	<script src="../../AV/PL/interpreter
+s/lambdacalc/version1.4/scripts/absyn.js"></script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/interpreter.js"></script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/randomExamples.js"></script>
 	<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+	<link rel="stylesheet" href="./exercises.css" type="text/css" />
 </head>
 
 <body data-height="650" data-width="950">
@@ -26,10 +28,10 @@
 		<var id="CorrectAnswer">getAnswerSubstitutionCases()</var>
 		<var id="Option0">"1a"</var>
 		<var id="Option1">"1b"</var>
-		<var id="Option2">"2"</var>
-		<var id="Option3">"3a"</var>
-		<var id="Option4">"3b"</var>
-		<var id="Option5">"3c"</var>
+		<var id="Option2">"2a"</var>
+		<var id="Option3">"2b"</var>
+		<var id="Option4">"2c"</var>
+		<var id="Option5">"3"</var>
 	</div>
 	<div class="problems">
 		<div>
