The SubstitutionCases exercise is now functional and has been added to the PL/LC chapter

--- a/Exercises/PL/SubstitutionCases.html
+++ b/Exercises/PL/SubstitutionCases.html
@@ -56,19 +56,18 @@ s/lambdacalc/version1.4/scripts/absyn.js"></script>
 			  lambda expression that you are substituting
 			  into.</p>
 			  <p>If case 1 is applicable, check whether
-			  the variable you are replacing is equal to
-			  the lambda expression you are substituting
-			  into.</p>
-			  <p>If case 2 is applicable, check
-			  whether the variable you are replacing is
-			  the same as the parameter of the lambda
+			  the variable you are substituting for is
+			  equal to the lambda expression you are
+			  substituting into.</p>
+			  <p>If case 2 is applicable, check whether
+			  the variable you are substituting for is the
+			  same as the parameter of the lambda
 			  abstraction you are substituting into.</p>
 			  <p>If case 2 is applicable and the answer to
 			  the previous hint is "No" then check whether
 			  the parameter of the lambda abstraction you
 			  are substituting into occurs free in the
-			  expression that you are substituting for the
-			  variable.</p>
+			  expression that you are substituting in.</p>
 			</div>
 		</div>
 	</div>
