Added the SubstitutionResult exercise to the PL/LC chapter

--- a/Exercises/PL/AlphaConversion.html
+++ b/Exercises/PL/AlphaConversion.html
@@ -102,7 +102,7 @@
 		  whose binding occurrence is underlined.</p>
 		    <div id="jsav"></div>
 		  </div>
-		  <div class="solution" data-type="regex" data-size="20">
+		  <div class="solution" data-type="regex">
 		    <var>CorrectAnswer</var>
 		  </div>
 		  
