Updated the SLang interpreter version 1.04 for class use

--- a/AV/PL/interpreters/version1.04/interpreter.html
+++ b/AV/PL/interpreters/version1.04/interpreter.html
@@ -127,10 +127,10 @@ The interpreter uses the following startup environment:<br />
 
 <div id="main">
 
-<h1>Interpreter Version 1.04</h1>
+<h1>Interpreter</h1>
 
 <strong>Enter the program you want to interpret below:</strong><br /><br />
-<textarea id="interpreterinput" rows="20" cols="80">
+<textarea id="interpreterinput" rows="5" cols="80">
 </textarea>
 
 <br/><br/>
