--- a/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-top.html
+++ b/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-top.html
@@ -6,6 +6,10 @@
     <title>Lambda Calculus interpreter</title>
 
     <link rel="stylesheet" href="../../../../../../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" />
+<script
+   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
 
     <style>
