Description of Recutor Ex enhanced

--- a/Exercises/RecurTutor/recwrc10PROG.html
+++ b/Exercises/RecurTutor/recwrc10PROG.html
@@ -33,7 +33,7 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">    Given the following mystery function write down the missing recursive call such that this function returns a value of 15 when mystery(5) is called.
+      <p class="problem" id = "test">   Given the following mystery function write down the missing recursive call such that this function returns a cumulative sum of the values from 1 to k. (e.g. 15 will be returned when mystery(5) is called, 21 when  when mystery(6) is called and so on) .
 	  
       <br />
     </h4>
