--- a/Exercises/RecurTutor/recHrdCodeCompSumm.html
+++ b/Exercises/RecurTutor/recHrdCodeCompSumm.html
@@ -20,6 +20,6 @@
   <div class="exercise" data-name="rechwrcra16PROG"></div>
   <div class="exercise" data-name="rechwrc17PROG"></div>
   <div class="exercise" data-name="rechw2bc18PROG"></div>
-
+  <div class="exercise" data-name="rechw2bc15PROG"></div>
 </body>
 </html>
