New graph questions with av embedded into the questions, need to add functions to generate variety in questions

--- a/Exercises/Development/GraphAdjacTF2.html
+++ b/Exercises/Development/GraphAdjacTF2.html
@@ -20,8 +20,7 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>Neighboring verticies are also adjacent.</p>
       </div>
     </div>
   </div>
