--- a/Exercises/Development/GraphAdjacTF1.html
+++ b/Exercises/Development/GraphAdjacTF1.html
@@ -21,8 +21,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>Neighboring verticies are adjacent to one another.</p>
+        <p>Two verticies are consider neighbors if there is an
+         edge connecting them.</p>
       </div>
     </div>
   </div>
