Adding random vertex functionality to exercies

--- a/Exercises/Development/GPredecessorTF1.html
+++ b/Exercises/Development/GPredecessorTF1.html
@@ -39,7 +39,7 @@ var initJSAV = function () {
   <div class="problems">
 
     <div id="problem-type-or-description-1">
-      <p class="problem"> ANSWER TRUE OR FALSE
+      <p class="problem"> 
         <div id="jsav" class="jsavcanvas"></div>
       </p>
       <p class="question">
