--- a/Exercises/Development/GVertexDegreeMC.html
+++ b/Exercises/Development/GVertexDegreeMC.html
@@ -38,11 +38,24 @@ var initJSAV = function () {
 
   g.layout();
 }
+
+function getAnswer(node){
+  if (node == 2){
+    return 4;
+  }
+  else {
+    return 2;
+  }
+}
+
+
 </script> 
 
 <div class="exercise">
   <div class="vars">
     <var id="JSAV">initJSAV()</var>
+    <var id="node">randRange(1, 5)</var>
+     <var id="ANS">getAnswer(node)</var>
   </div>
 
   <div class="problems">
@@ -51,8 +64,8 @@ var initJSAV = function () {
       <p class="problem">
         <div id="jsav" class="jsavcanvas"></div>
       </p>
-      <p class="question">What it the degree of vertex 2?</p>
-      <p class="solution" data-type="text"><var>4</var></p>
+      <p class="question">What it the degree of vertex <var>node</var>?</p>
+      <p class="solution" data-type="text"><var>ANS</var></p>
     </div>
   </div>
 </div>
